Fixed gap below video

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ video {
 	width: 100vw;
 	height: 100vh;
 	opacity: 0.64;
+	display: block;
 	object-fit: cover;
 }
 
